docs_openshift/day-4Route/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-resource
  annotations:
    description: "OpenShift Route for multiple services"
spec:
  host: thekundan.com
  to:
    kind: Service
    name: nginx
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-route
  annotations:
    description: "Route for httpd service"
spec:
  host: thekundan.com
  path: /httpd
  to:
    kind: Service
    name: httpd
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: abhishek-route
  annotations:
    description: "Route for abhishek path"
spec:
  host: thekundan.com
  path: /abhishek
  to:
    kind: Service
    name: httpd
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
